plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.7'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'tgb.cryptoexchange'
version = '0.0.1-SNAPSHOT'
description = 'dev-bot details'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
	mavenLocal()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.13'
	implementation 'commons-codec:commons-codec:1.19.0'
	implementation 'org.bouncycastle:bcprov-jdk18on:1.78.1'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation "org.mapstruct:mapstruct:1.5.5.Final"
	implementation 'org.springframework.kafka:spring-kafka:3.3.10'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	annotationProcessor "org.projectlombok:lombok-mapstruct-binding:0.2.0"
	annotationProcessor "org.mapstruct:mapstruct-processor:1.5.5.Final"
	runtimeOnly 'com.mysql:mysql-connector-j'
	implementation 'tgb.cryptoexchange:common-api:1.1.0'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testImplementation 'com.h2database:h2'
}

tasks.named('test') {
	useJUnitPlatform()
}

tasks.withType(JavaCompile) {
	options.encoding = 'UTF-8'
}
tasks.withType(Test) {
	systemProperty "file.encoding", "UTF-8"
}

tasks.jar {
	archiveFileName = "details.jar"
}

bootJar {
	archiveFileName = 'details.jar'
}

